--- a/experimental/chezmoiscripts/run_onchange_0_install_bazelisk.sh.tmpl
+++ b/experimental/chezmoiscripts/run_onchange_0_install_bazelisk.sh.tmpl
@@ -19,8 +19,8 @@ echo "windows unsupported - need to create some run_onchange_0_install_git.ps1.t
 echo "beyond that, need to make some decisions about how/where to manage binaries on windows."
 {{ else }}
 curl -LO --create-dirs "$URL" --output-dir "$OUT_DIR"
-chmod +x "${OUT_DIR}/bazelisk-linux-amd64"
-sudo mv "${OUT_DIR}/bazelisk-linux-amd64" /usr/local/bin/bazelisk
+chmod +x "${OUT_DIR}/bazelisk-{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
+sudo mv "${OUT_DIR}/bazelisk-{{ .chezmoi.os }}-{{ .chezmoi.arch }}" /usr/local/bin/bazelisk
 sudo ln -sf /usr/local/bin/bazelisk /usr/local/bin/bazel
 {{ end }}
 
